React/DP-12183: Fixes spacing issue in IE for decorative link (#403)
* fix spacing issue in IE for decorative link

* add changelog

--- a/assets/scss/01-atoms/_decorative-link.scss
+++ b/assets/scss/01-atoms/_decorative-link.scss
@@ -40,7 +40,7 @@
       position: relative;
 
       svg {
-        margin-right: unset;
+        margin-right: 0;
         width: 29px;
         height: 30px;
       }
